# openapi-dto-gen

./: LICENSE  README.md  pyproject.toml
openapi_dto_gen/: cli.py
