[tool.poetry]
name = "openapi-dto-gen"
version = "0.1.0"
description = "Python module for DTO generation based on OpenAPI schema spec"
authors = ["Vincent <v_rohou@yahoo.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
mock = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
dto-gen = 'openapi_dto_gen.cli:main'